--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,4 +1,4 @@
-<section class="pt-1 pb-3" id="about">
+<section class="pb-1" id="about">
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2">
     <h2 class="section-h2">
