--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,5 +1,5 @@
 
-<section class="mt-1 pb-3" id="project">
+<section class="" id="project">
 
   <!-- Section Title Row -->
   <div class="section-header pt-3 pb-2" >
