--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -1,4 +1,22 @@
 <!-- Footer -->
-<footer class="">
-    <p>©2019 Jon Tow</p>
+<footer >
+  <div class="footer-date">
+  2k19
+  </div>
+  <div class="arrow-right-date">
+  </div>
+  <div class="footer-name">
+    jon-tow.html 
+  </div>
+  <div class="arrow-right-file">
+  </div>
+  <div class="footer-mode">
+      life-mode
+  </div>
+  <div class="arrow-left-mode">
+  </div>
+  <div class="footer-percent">
+    100%
+  </div>
+
 </footer>
