--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,4 +1,6 @@
-<section class="pb-1" id="about">
+
+
+<section id="about">
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2">
     <h2 class="section-h2">
@@ -8,40 +10,41 @@
 
   <!-- Content -->
   <div class="section-content ">
-    <!-- Bio Row -->
-    <p>
-      <b>CS @ Stony Brook University</b>
-      <br>
-      <br>
-      I enjoy coding, tinkering with
-      machine learning models,
-      and pretending to be a musician.
-    </p>
-    <p>
-      I'm always looking for new things to learn.
-      My curiosity hasn't hurt me yet.
-    </p>
-    <p></p>
-    <!-- End of Bio Row -->
+      <!-- Bio Row -->
+      <p>
+        <b>CS @ Stony Brook University</b>
+        <br>
+        <br>
+        I enjoy coding, tinkering with
+        machine learning models,
+        and pretending to be a musician.
+      </p>
+      <p>
+        I'm always looking for new things to learn.
+        My curiosity hasn't hurt me yet.
+      </p>
+      <p></p>
+      <!-- End of Bio Row -->
 
-    <!-- Resume -->
-    <p>
-      <i style="color: var(--main-color)" class="mr-1 fas fa-file-alt fa-md"></i>
-      <a href="../../data/resume.pdf">
-      <span class="pb-2">resume</span>
-      </a>
+      <!-- Resume -->
+      <p>
+        <i class="mr-1 fas fa-file-alt fa-md"></i>
+        <a href="../../data/resume.pdf">
+          <span class="pb-2">resume</span>
+        </a>
 
-    </p>
-    <!-- End of Resume Row -->
+      </p>
+      <!-- End of Resume Row -->
 
-    <!-- Resume -->
-    <p>
-      <i style="color: var(--main-color)" class="mr-1 fas fa-envelope fa-sm"></i>
-      <a href="jonathantow1@gmail.com">
-        <span >jonathantow1 @ gmail.com</span>
-      </a>
-    </p>
-    <!-- End of Resume Row -->
+      <!-- Resume -->
+      <p>
+        <i class="mr-1 fas fa-envelope fa-sm"></i>
+        <a href="jonathantow1@gmail.com">
+          <span>jonathantow1 @ gmail.com</span>
+        </a>
+      </p>
+      
+      <!-- End of Resume Row -->
   </div>
 
   <!-- End of Content -->
