--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -11,9 +11,9 @@
   <!-- Content -->
   <div class="section-content ">
       <!-- Bio Row -->
+      <h3>CS @ Stony Brook University</h3>
+
       <p>
-        <b>CS @ Stony Brook University</b>
-        <br>
         <br>
         I enjoy coding, tinkering with
         machine learning models,
