--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,4 +1,4 @@
-<section class="" id="project">
+<section id="project">
 
   <!-- Section Title Row -->
   <div class="section-header pt-3 pb-2">
@@ -7,87 +7,86 @@
     </h2>
   </div>
 
-  <div class="section-content" style="">    
+  <div class="section-content">
 
     <!-- LANGUAGE -->
     <div class="project-type mb-2 pt-0">
-        <h3>Language</h3>
+      <h3>Language</h3>
+    </div>
+    <!-- Note Projects Row -->
+    <div class="project-row row pl-0">
+      <!-- Column Content -->
+      <div class="project-item pt-2 col-sm">
+        <h4>
+          <a href="https://github.com/jon-tow/lispp">
+            Lispp
+          </a>
+        </h4>
+        <p>          
+          A little LISP interpreter built
+          with Modern C++.
+          <br>
+          <a href="https://github.com/jon-tow/lispp">github</a>.
+        </p>
       </div>
-      <!-- Note Projects Row -->
-      <div class="project-row row pl-0">
-        <!-- Column Content -->
-        <div class="project-item col-sm">
-          <h4>
-            <a href="https://github.com/jon-tow/lispp">
-              Lispp
-            </a>
-          </h4>
-          <p>
-            A little LISP interpreter built
-            with Modern C++.
-            <br>
-            <a href="https://github.com/jon-tow/lispp">github</a>.
-          </p>
-        </div>
-        <div class="project-item col-sm">
-  
-        </div>
+      <div class="project-item col-sm">
       </div>
-      <!-- End of Projects Row -->
+    </div>
+    <!-- End of Projects Row -->
 
-      <!-- PLAYGROUND -->
+    <!-- PLAYGROUND -->
     <div class="project-type mb-2 pt-2">
-        <h3>Playground</h3>
+      <h3>Playground</h3>
+    </div>
+
+    <!-- Note Projects Row -->
+    <div class="project-row row pl-0">
+      <!-- Column Content -->
+      <div class="project-item col-sm">
+        <h4>
+          <a href="projects/impossible-tic-tac-toe/index.html">
+            Impossible Tic-Tac-Toe <i class="fas fa-gamepad"></i>
+          </a>
+        </h4>
+        <p>
+          A minimax implementation for deciding the best moves in a tic-tac-toe game.
+          <br />
+          <a href="https://github.com/jon-tow/impossible-tic-tac-toe">github</a>.
+        </p>
       </div>
-      
-      <!-- Note Projects Row -->
-      <div class="project-row row pl-0">
-        <!-- Column Content -->
-        <div class="project-item col-sm">
-          <h4>
-            <a href="projects/impossible-tic-tac-toe/index.html">
-              Impossible Tic-Tac-Toe <i class="fas fa-gamepad"></i>
-            </a>
-          </h4>
-          <p>
-            A minimax implementation for deciding the best moves in a tic-tac-toe game.
-            <br />
-            <a href="https://github.com/jon-tow/impossible-tic-tac-toe">github</a>.
-          </p>
-        </div>
-        <div class="project-item col-sm">
-          <h4>
-            <a href="projects/sudoku-solver/index.html">
-              Sudoku Solver <i class="fas fa-gamepad"></i>
-            </a>
-          </h4>
-          <p>
-            A sudoku solver implemented with backtracking.
-            <br />
-            <a href="https://github.com/jon-tow/sudoku-solver">github</a>.
-          </p>
-        </div>
+      <div class="project-item col-sm">
+        <h4>
+          <a href="projects/sudoku-solver/index.html">
+            Sudoku Solver <i class="fas fa-gamepad"></i>
+          </a>
+        </h4>
+        <p>
+          A sudoku solver implemented with backtracking.
+          <br />
+          <a href="https://github.com/jon-tow/sudoku-solver">github</a>.
+        </p>
       </div>
-      <!-- End of Projects Row -->
-  
-      <!-- Note Projects Row -->
-      <div class="project-row row pl-0">
-        <!-- Column Content -->
-        <div class="project-item col-sm">
-          <h4>
-            <a href="projects/maze-solver/index.html">
-              Maze Solver <i class="fas fa-gamepad"></i>
-            </a>
-          </h4>
-          <p>
-            A visualization of the basic uninformed search algorithms, depth-first and breadth-first. <br />
-            <a href="https://github.com/jon-tow/maze-solver">github</a>.
-          </p>
-        </div>
-        <div class="project-item col-sm">        
-        </div>
+    </div>
+    <!-- End of Projects Row -->
+
+    <!-- Note Projects Row -->
+    <div class="project-row row pl-0">
+      <!-- Column Content -->
+      <div class="project-item col-sm">
+        <h4>
+          <a href="projects/maze-solver/index.html">
+            Maze Solver <i class="fas fa-gamepad"></i>
+          </a>
+        </h4>
+        <p>
+          A visualization of the basic uninformed search algorithms, depth-first and breadth-first. <br />
+          <a href="https://github.com/jon-tow/maze-solver">github</a>.
+        </p>
       </div>
-      <!-- End of Projects Row -->
+      <div class="project-item col-sm">
+      </div>
+    </div>
+    <!-- End of Projects Row -->
   </div>
 
   <!-- End of Content -->
