--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -5,8 +5,11 @@
   </div>
   <div class="arrow-right-date">
   </div>
+  <div class="footer-branch">    
+      <i class="fas fa-code-branch"></i>
+    </div>
   <div class="footer-name">
-    jon-tow.html 
+      jon-tow.html 
   </div>
   <div class="arrow-right-file">
   </div>
