--- a/css/main.css
+++ b/css/main.css
@@ -107,14 +107,26 @@ footer {
   background-color: #464751;
 }
 
-.footer-name {  
+.footer-branch {
+  height: 100%;
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  
+  padding-right: .5em;
+  padding-top: .1em;
+  background-color: var(--secondary-bg);
+}
+
+.footer-name {    
   height: 100%;
 
   display:flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  align-items: center;
   padding-left: .5em;  
   padding-right: 1em;
+
   background-color: var(--secondary-bg);
 }
 
