fix project alignment

--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -8,13 +8,13 @@
   <div class="collapse pt-0 pb-0 navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto pr-2">
       <li class="nav-item">
-        <a class="nav-link" href="{{site.url}}#about">/About </a>
+        <a class="nav-link" href="{{site.url}}#about">.About </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{site.url}}#project"">/Projects</a>
+        <a class="nav-link" href="{{site.url}}#project"">.Projects</a>
       </li>
       <li class="nav-item"></li>
-      <a class="nav-link" href="{{site.url}}#notes">/Notes</a>
+      <a class="nav-link" href="{{site.url}}#notes">.Notes</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://github.com/jon-tow">
