--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -49,3 +49,7 @@
 
   <!-- End of Content -->
 </section>
+
+<div style="margin-top: 1em; height: 2px; width: 91%; background-color: #444758;">
+
+</div>
