--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -16,7 +16,7 @@
     <!-- Note Projects Row -->
     <div class="project-row row pl-0">
       <!-- Column Content -->
-      <div class="project-item pt-2 col-sm">
+      <div class="project-item col-sm">
         <h4>
           <a href="https://github.com/jon-tow/lispp">
             Lispp
@@ -42,7 +42,7 @@
     <!-- Note Projects Row -->
     <div class="project-row row pl-0">
       <!-- Column Content -->
-      <div class="project-item pt-2 col-sm">
+      <div class="project-item col-sm">
         <h4>
           <a href="projects/impossible-tic-tac-toe/index.html">
             Impossible Tic-Tac-Toe <i class="fas fa-gamepad"></i>
