change font inconsolata

--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -14,7 +14,7 @@
   <div class="arrow-right-file">
   </div>
   <div class="footer-mode">
-      life-mode
+      Life-mode
   </div>
   <div class="arrow-left-mode">
   </div>
