--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 
     margin: 0 auto;
     
-    font-size: 1em;  
+    font-size: 1.125em;  
     font-family: "Inconsolata", monospace, sans-serif;
     font-weight: 300;
     line-height: 1.5;
@@ -259,7 +259,8 @@ header a {
 
 
 .navbar-brand {
-  font-size: 1.3em;
+
+  font-weight: 600;
   margin-left: -.50em;
   color: white;
   padding-left: 0 !important;
@@ -312,8 +313,7 @@ section i {
     color: var(--green);
 }
 
-.top-link {
-    font-size:.9em;
+.top-link {    
     width: 100%;
     text-align:right;
     padding-right: 2em;
