--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ footer {
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  font-size: .875em;
+  font-size: 14px;
   flex-wrap: nowrap;
   
   width: 100%;
