--- a/css/main.css
+++ b/css/main.css
@@ -44,8 +44,7 @@ article {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  
+  align-items: stretch;  
 }
 
 header {
@@ -253,6 +252,7 @@ header a {
 
 .nav-link {
   padding-bottom: 0px;
+  padding-top: .65em;  
 }
 
 .nav-link:hover {}
@@ -266,6 +266,10 @@ header a {
   padding-left:0 !important;
 }
 
+.navbar-toggler {
+  padding-top: .55em;
+
+}
 .navbar-brand:hover {}
 
 .nav-item {}
