--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ body {
     margin: 0 auto;
     
     font-size: 1.125em;  
-    font-family: "Inconsolata", monospace, sans-serif;
+    font-family: "Ubuntu Mono", monospace;
     font-weight: 300;
     line-height: 1.5;
     
