--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,6 +1,4 @@
-
-
-<section id="about">
+<section class="pt-3" id="about">
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2">
     <h2 class="section-h2">
@@ -8,48 +6,47 @@
     </h2>
   </div>
 
+
   <!-- Content -->
   <div class="section-content ">
-      <!-- Bio Row -->
-      <h3>CS @ Stony Brook University</h3>
+    <!-- Bio Row -->
+    <p>
+      <b>CS @ Stony Brook University</b>
+      <br>
 
-      <p>
-        <br>
-        I enjoy coding, tinkering with
-        machine learning models,
-        and pretending to be a musician.
-      </p>
-      <p>
-        I'm always looking for new things to learn.
-        My curiosity hasn't hurt me yet.
-      </p>
-      <p></p>
-      <!-- End of Bio Row -->
+      <br>
+      I enjoy coding, tinkering with
+      machine learning models,
+      and pretending to be a musician.
+    </p>
 
-      <!-- Resume -->
-      <p>
-        <i class="mr-1 fas fa-file-alt fa-md"></i>
-        <a href="../../data/resume.pdf">
-          <span class="pb-2">resume</span>
-        </a>
+    <p>
+      I'm always looking for new things to learn.
+      My curiosity hasn't hurt me yet.
+    </p>
+    <p></p>
+    <!-- End of Bio Row -->
 
-      </p>
-      <!-- End of Resume Row -->
+    <!-- Resume -->
+    <p>
+      <a href="../../data/resume.pdf">
+        <i class="fas fa-file-alt fa-md"></i>
+        <span class="pb-2 pl-1">resume</span>
+      </a>
 
-      <!-- Resume -->
-      <p>
-        <i class="mr-1 fas fa-envelope fa-sm"></i>
-        <a href="jonathantow1@gmail.com">
-          <span>jonathantow1 @ gmail.com</span>
-        </a>
-      </p>
-      
-      <!-- End of Resume Row -->
+    </p>
+    <!-- End of Resume Row -->
+
+    <!-- Resume -->
+    <p>
+      <a href="jonathantow1@gmail.com">
+        <i class="fas fa-envelope fa-sm"></i>
+        <span class="pl-1">jonathantow1 @ gmail.com</span>
+      </a>
+    </p>
+    <!-- End of Resume Row -->
+
   </div>
 
   <!-- End of Content -->
 </section>
-
-<div style="margin-top: 1em; height: 2px; width: 91%; background-color: #444758;">
-
-</div>
