--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,28 +1,29 @@
-<nav class="navbar navbar-expand-sm " id="nav">
-  <a class="navbar-brand pt-2 pb-0" href="{{site.url}}">Jonathan Tow</a>
-  <button class="navbar-toggler navbar-dark navbar-toggler-right mr-2" type="button" data-toggle="collapse"
+<!-- Top Nav Block -->
+<nav class="navbar navbar-expand-sm mt-2 pt-3" id="nav">
+  <a class="navbar-brand" href="{{site.url}}">Jonathan Tow</a>
+  <button class="navbar-toggler navbar-light navbar-toggler-right mr-2" type="button" data-toggle="collapse"
     data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse pt-0 pb-0 navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto pr-2">
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="{{site.url}}#about">.About </a>
+        <a class="" href="{{site.url}}#about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{site.url}}#project"">.Projects</a>
-      </li>
-      <li class="nav-item"></li>
-      <a class="nav-link" href="{{site.url}}#notes">.Notes</a>
+        <a class="" href="{{site.url}}#project">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/jon-tow">
+        <a class="" href="{{site.url}}#notes">Notes</a>
+      </li>
+      <li class="nav-item">
+        <a class="" href="https://github.com/jon-tow">
           <i class="fab fa-github fa-lg"></i>
         </a>
       </li>
       <li class="nav-item">
-        <a class="pb-0 nav-link" href="https://twitter.com/jonbtow">
+        <a class="" href="https://twitter.com/jonbtow">
           <i class="fab fa-twitter fa-lg"></i>
         </a>
       </li>
