--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -1,12 +1,13 @@
-<section class=" " >
-    
+  
+<section class="pt-3" >
+
   <!-- Section Title Row -->
-  <div class="section-header pt-3 pb-3" id="notes">
+  <div class="section-header pt-2" id="notes">
     <h2 class="section-h2">
       <p>Notes</p>
     </h2>
     <div class="top-link">
-      <a href="#nav"> Back to top </a>
+      <a href="#nav" class=""> Back to top </a>
     </div>
   </div>
 
