--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,7 +1,7 @@
 <!-- Top Nav Block -->
-<nav class="navbar navbar-expand-sm mt-2 pt-3" id="nav">
-  <a class="navbar-brand" href="{{site.url}}">Jonathan Tow</a>
-  <button class="navbar-toggler navbar-light navbar-toggler-right mr-2" type="button" data-toggle="collapse"
+<nav class="navbar ml-0 mr-1 navbar-expand-sm mt-4 pt-2" id="nav">
+  <span class="navbar-brand" style="color: var(--main-color)" href="{{site.url}}">Jonathan Tow</span>
+  <button class="navbar-toggler navbar-light navbar-toggler-right mb-1 mr-3" type="button" data-toggle="collapse"
     data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
