--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,9 +1,10 @@
-<section class="pt-3" id="about">
+<section class="pt-4" id="about">
+
   <!-- Section Title Row -->
   <div class="section-header pt-2 pb-2">
-    <h2 class="section-h2">
+    <h1 class="section-h2">
       <p>About</p>
-    </h2>
+    </h1>
   </div>
 
 
@@ -29,20 +30,23 @@
 
     <!-- Resume -->
     <p>
-      <a href="../../data/resume.pdf">
-        <i class="fas fa-file-alt fa-md"></i>
-        <span class="pb-2 pl-1">resume</span>
-      </a>
-
+      <i style="color: var(--main-color);" class="fas fa-file-alt fa-md"></i>
+      <span class="pb-2 pl-1">
+        <a href="../../data/resume.pdf">
+        resume
+        </a>
+      </span>
     </p>
     <!-- End of Resume Row -->
 
     <!-- Resume -->
     <p>
-      <a href="jonathantow1@gmail.com">
-        <i class="fas fa-envelope fa-sm"></i>
-        <span class="pl-1">jonathantow1 @ gmail.com</span>
-      </a>
+      <i style="color: var(--main-color);" class="fas fa-envelope fa-sm"></i>
+      <span class="pl-1">
+        <a href="jonathantow1@gmail.com">
+          jonathantow1 @ gmail.com
+        </a>
+      </span> 
     </p>
     <!-- End of Resume Row -->
 
