--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -1,11 +1,11 @@
   
-<section class="pt-3" >
+<section class="pt-3" id="notes">
 
   <!-- Section Title Row -->
-  <div class="section-header pt-2" id="notes">
-    <h2 class="section-h2">
+  <div class="section-header pt-2" >
+    <h1 class="section-h2">
       <p>Notes</p>
-    </h2>
+    </h1>
     <div class="top-link">
       <a href="#nav" class=""> Back to top </a>
     </div>
@@ -14,26 +14,27 @@
   
   <!-- Content -->
   <div class="section-content" style="">
-    Notes are under construction.
-      <!-- Notes Row 
+      <!-- Notes Row -->
         
         <ul class="entry-previews">          
           {% for post in site.posts limit:5 %}
           <li>
             <p class="post-preview">
+              <span style="font-size: 16px; color: var(--light-black);">{{ post.date | date: '%B %d, %Y' }}</span>
+              <br>
               <a href="{{ post.url }}">
                 {{ post.title }}
               </a>
-              <br> {{ post.introduction }}
-              <a href="{{ post.url }}">
-                (read more)
-              </a>
-              <br> - {{ post.date | date: '%B %d, %Y' }}
+              <br>
+              <span style="color: var(--light-black);">
+              {{ post.introduction }}
+              </span>
+              <br>     
             </p>
           </li>
           {% endfor %}
         </ul>
-      -->
+      
   </div>
 
 </section>
