--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
 :root {
   /* Global Colors */
-    --main-color: rgb(138, 101, 241);
+    --main-color: rgb(0, 151, 210);
     --main-white: #FCFCFC;    
-    --black: #505050;
+    --black: #5c5c5c;
     --light-black: rgb(75, 75, 75);
     --bg: rgb(244, 244, 251);
   /* Global Styles */
-    --box-shadow: rgba(0, 0, 0, 0) 1px 0px 8px;
+    --box-shadow: rgba(27, 27, 27, 0) 1px 3px 8px;
     --inner-left-align: .9em;
 }
 
@@ -69,12 +69,11 @@ ol li {
 
 /* Header Styling */
 h1 {
-    font-size: 2em;
+    font-size: 1.75em;
 }
 
 h2 {
-    margin: 1.75em 0 0.5em;
-    border-bottom: 2px solid #dce3ea;
+  font-size: 1.5em;
 }
 
 h1, h2 {
@@ -116,14 +115,16 @@ header a {
 
 
 /* Nav Styling */
-.navbar {
-    width: 100%;
-    padding: 0.5em 0 0.5em 1.5em;        
-    background-color: var(--main-white);    
-}
+.navbar {    
+    margin-left: .65em;
+    background-color: #F4F4FA;
+    border-radius: 4px;
+ }
 
 .navbar-nav  {
   padding-right: 1em !important;  
+  padding-left: 1em !important;  
+  
 }
 
 .navbar-nav .navbar ul li {
@@ -135,13 +136,13 @@ header a {
 }
 
 .navbar-brand {
-  font-size: 1.4em;  
   font-weight: bold;
+  font-size: 1.4em;
+  padding-left: .75em;
 }
 
 .navbar-brand:hover {}
 
-.nav-item {}
 /*------------*/
 
 
@@ -152,7 +153,7 @@ section {
   flex: 1 1 auto;
   
   height: auto; 
-  min-height: 29em;
+  min-height: 28em;
   
   border-radius: 4px;
 }
@@ -164,6 +165,14 @@ section {
   align-items: center;
   padding-left: 2em;
   padding-bottom: .7em;
+}
+
+.post-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding-left: 2em;
 }
 
 .section-h2 {
@@ -187,7 +196,23 @@ section {
   display: flex;
   flex-direction: column;  
   flex-wrap: wrap;
-  padding: 1em 2em 0em 2em;
+  padding: 1em 2em 0em 2.1em;
+}
+
+.post-content {
+  display: flex;
+  flex-direction: column;  
+  flex-wrap: wrap;
+  padding: 0em 1em 0em 2.1em;
+}
+
+.entry-previews {
+  list-style: none;
+}
+
+.post-date {
+  color: var(--light-black);
+  font: 14px;
 }
 
 .slide {
@@ -216,17 +241,21 @@ blockquote {
 /*-------------*/
 
 #about {
-
+  
 }
 
 #project {
   background-color: var(--bg);  
 }
+
+#notes {
+ 
+}
+
 .project-type {
   color: var(--light-black);
 }
 
-/* About Styling */
 .tab-content {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -263,19 +292,18 @@ blockquote {
 footer {    
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  font-size: 14px;
+  align-items: flex-start;
+  justify-content: flex-start;  
   flex-wrap: nowrap;
   
+  font-size: 14px;
+
   width: 100%;
   height: 2em;
+
   position: fixed;
-  left: 25%;
-  margin-left: -25%;
+      
   bottom:0;
-  
-  position: fixed;      
 }
 
 .footer-date {
@@ -284,9 +312,11 @@ footer {
   flex-direction: column;
   justify-content: center;
   
-  padding-left: .5em;
+  padding-left: .4em;
   padding-right: .4em;
 
+  font-weight: bold;
+  font-size: 1.2em;
   color: var(--bg);
   background-color: var(--main-color);
 }
