--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -5,4 +5,7 @@
   </div>
   <div class="arrow-right-date">
   </div>
+  <div class="pt-1">
+    <p>©2019 - Built by Jon Tow with Jekyll and <span class="love">❤</span>
+  </div>
 </footer>
