--- a/_includes/_base/head.html
+++ b/_includes/_base/head.html
@@ -19,7 +19,9 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto|Permanent+Marker" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
-
+  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+  <script src="../../assets/app.js"></script>
+  
   <!-- Smooth Scrolling -->
   <script>
     $(document).ready(function () {
@@ -34,7 +36,8 @@
           );
         }
       });
-    });
+    });    
   </script>
+
   <title>Jonathan Tow</title>
 </head>
