--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,33 +1,28 @@
 <!-- Top Nav Block -->
-<nav class="navbar ml-0 mr-1 navbar-expand-sm mt-4 pt-2" id="nav">
-  <span class="navbar-brand" style="color: var(--main-color)" href="{{site.url}}">Jonathan Tow</span>
-  <button class="navbar-toggler navbar-light navbar-toggler-right mb-1 mr-3" type="button" data-toggle="collapse"
-    data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<div class="home-banner">
+  <div class="mb-2" style="border-radius: 4px; background-color: var(--main-white); text-align: center;">
+  <a class="" href="{{site.url}}">
+    <span class="navbar-brand" style="color: var(--third-color)" href="{{site.url}}">
+      Jon Tow
+    </span>
+  </a>  
+</div>
+  <nav class="navbar ml-0 navbar-expand  pt-2" id="nav">
 
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="" href="{{site.url}}#about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="" href="{{site.url}}#project">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="" href="{{site.url}}#notes">Notes</a>
-      </li>
-      <li class="nav-item">
-        <a class="" href="https://github.com/jon-tow">
-          <i class="fab fa-github fa-lg"></i>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="" href="https://twitter.com/jonbtow">
-          <i class="fab fa-twitter fa-lg"></i>
-        </a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<!-- End of Top Nav -->
+    <div class="collapse navbar-collapse"
+    style="word-spacing: 2px; " id="navbarNav">
+    <p>
+          <a class="" href="{{site.url}}#about">about</a> / 
+          <a class="" href="{{site.url}}#project">projects</a> / 
+          <a class="" href="{{site.url}}#notes">notes</a> / 
+          <a class="" href="https://github.com/jon-tow">
+            <i class="fab fa-github fa-lg"></i> 
+          </a> /
+          <a class="" href="https://twitter.com/jonbtow">
+            <i class="fab fa-twitter fa-lg"></i>
+          </a>
+    </p>
+    </div>
+  </nav>
+  <!-- End of Top Nav -->
+</div>
