--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,7 +1,7 @@
-<section class="pt-4" id="about">
+<section id="about">
 
   <!-- Section Title Row -->
-  <div class="section-header pt-2 pb-2">
+  <div class="section-header pb-2">
     <h1 class="section-h2">
       <p>About</p>
     </h1>
@@ -22,8 +22,7 @@
     </p>
 
     <p>
-      I'm always looking for new things to learn.
-      My curiosity hasn't hurt me yet.
+      I'm always looking for new things to learn. 
     </p>
     <p></p>
     <!-- End of Bio Row -->
