--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -1,13 +1,13 @@
   
-<section class="pt-3" id="notes">
+<section class="pt-1" id="notes">
 
   <!-- Section Title Row -->
-  <div class="section-header pt-2" >
+  <div class="section-header" >
     <h1 class="section-h2">
       <p>Notes</p>
     </h1>
     <div class="top-link">
-      <a href="#nav" class=""> Back to top </a>
+      <a href="#about" style="color: var(--second-color);" class=""> Back to top </a>
     </div>
   </div>
 
@@ -16,25 +16,7 @@
   <div class="section-content" style="">
       <!-- Notes Row -->
         
-        <ul class="entry-previews">          
-          {% for post in site.posts limit:5 %}
-          <li>
-            <p class="post-preview">
-              <span style="font-size: 16px; color: var(--light-black);">{{ post.date | date: '%B %d, %Y' }}</span>
-              <br>
-              <a href="{{ post.url }}">
-                {{ post.title }}
-              </a>
-              <br>
-              <span style="color: var(--light-black);">
-              {{ post.introduction }}
-              </span>
-              <br>     
-            </p>
-          </li>
-          {% endfor %}
-        </ul>
-      
+      Under construction. Coming soon.
   </div>
 
 </section>
