--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,7 +1,7 @@
 <section class="pt-1 pb-4" id="project">
 
     <!-- Section Title Row -->
-    <div class="section-header pt-3 pb-2">
+    <div class="section-header pb-2">
       <h1 class="section-h2">
         <p>Projects</p>
       </h1>
@@ -26,7 +26,7 @@
             A little LISP interpreter built
             with Modern C++.
             <br>
-            <a href="https://github.com/jon-tow/lispp">github</a>.
+            <a class="third-color" href="https://github.com/jon-tow/lispp">github</a>.
           </p>
         </div>
         <div class="project-item col-sm">
@@ -51,7 +51,7 @@
           <p>
             A minimax implementation for deciding the best moves in a tic-tac-toe game.
             <br />
-            <a href="https://github.com/jon-tow/impossible-tic-tac-toe">github</a>.
+            <a class="third-color" href="https://github.com/jon-tow/impossible-tic-tac-toe">github</a>.
           </p>
         </div>
         <div class="project-item col-sm">
@@ -63,7 +63,7 @@
           <p>
             A sudoku solver implemented with backtracking.
             <br />
-            <a href="https://github.com/jon-tow/sudoku-solver">github</a>.
+            <a class="third-color" href="https://github.com/jon-tow/sudoku-solver">github</a>.
           </p>
         </div>
       </div>
@@ -80,7 +80,7 @@
           </h4>
           <p>
             A visualization of the basic uninformed search algorithms, depth-first and breadth-first. <br />
-            <a href="https://github.com/jon-tow/maze-solver">github</a>.
+            <a class="third-color" href="https://github.com/jon-tow/maze-solver">github</a>.
           </p>
         </div>
         <div class="project-item col-sm">
