--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,17 @@
 :root {
-  /* Global Colors */
-    --main-color: rgb(0, 151, 210);
-    --main-white: #FCFCFC;    
-    --black: #5c5c5c;
-    --light-black: rgb(75, 75, 75);
-    --bg: rgb(244, 244, 251);
+  /* Palette Colors */
+  --main-color: #8E80D6;
+  --second-color: #f8a442;
+  --third-color: #F86071;
+
+  --main-white: #FCFCFC;    
+  --black: #5c5c5c;
+  --light-black: rgb(75, 75, 75);
+  --bg: #F5F5F5;
+
   /* Global Styles */
-    --box-shadow: rgba(27, 27, 27, 0) 1px 3px 8px;
-    --inner-left-align: .9em;
+  --box-shadow: rgba(27, 27, 27, 0) 1px 3px 8px;
+  --inner-left-align: .9em;
 }
 
 * {
@@ -17,25 +21,42 @@
 }
 
 html, body {
-    height: 100%;
+    height: 100vh;
 }
 
 body {
-    min-height: 100%;
-    position: relative;
+  height: 100vh;
     margin: 0 auto;
 
-    font-size: 1.1em;
+    font-size: 1em;
     font-family: "Roboto", "Arial", sans-serif;
     line-height: 1.5;
-
-    max-width: 36em;
-
-    background-color: var(--main-white);/*var(--bg);*/
+    
 }
 
 .content {
     flex: 1 0 auto;
+}
+
+.third-color {
+  color: var(--second-color);
+}
+.sidebar { 
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--bg);
+}
+
+.contents { 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 hr {
@@ -47,12 +68,10 @@ hr {
   background-color: #EEEEEE;  
 }
 
-
 b {
   font-weight: 500;
   color: var(--light-black);
 }
-
 
 /* List Styling */
 ol {   
@@ -117,9 +136,7 @@ header a {
 /* Nav Styling */
 .navbar {    
     margin-left: .65em;
-    background-color: #F4F4FA;
-    border-radius: 4px;
- }
+  }
 
 .navbar-nav  {
   padding-right: 1em !important;  
@@ -148,14 +165,12 @@ header a {
 
 /* Section Styling */
 section {
-  display: flex;
-  flex-direction: column;
-  flex: 1 1 auto;
-  
-  height: auto; 
-  min-height: 28em;
-  
-  border-radius: 4px;
+  padding-left: 1em;
+  padding-right: 1em;
+
+  min-height: 100vh; 
+
+  background-color: var(--main-white);
 }
 
 .section-header {
@@ -163,6 +178,7 @@ section {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  padding-top: .5em;
   padding-left: 2em;
   padding-bottom: .7em;
 }
@@ -199,10 +215,15 @@ section {
   padding: 1em 2em 0em 2.1em;
 }
 
+
 .post-content {
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;    
   flex-wrap: wrap;
+
+  max-width: 36em;
+  
+  margin: 0;
   padding: 0em 1em 0em 2.1em;
 }
 
@@ -241,11 +262,14 @@ blockquote {
 /*-------------*/
 
 #about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   
 }
 
 #project {
-  background-color: var(--bg);  
+  background-color: rgb(255, 255, 248);
 }
 
 #notes {
@@ -300,10 +324,9 @@ footer {
 
   width: 100%;
   height: 2em;
-
-  position: fixed;
-      
+    
   bottom:0;
+  background-color: var(--main-white);
 }
 
 .footer-date {
@@ -331,79 +354,6 @@ footer {
   border-left: 1em solid var(--main-color);  
 }
 
-.footer-branch {
-  height: 100%;
-  display:flex;
-  flex-direction: row;
-  align-items: center;
-  
-  padding-right: .5em;
-  padding-top: .1em;
-  
-  color: var(--main-white);
-  background-color: #464750;
-}
-
-.footer-name {    
-  height: 100%;
-
-  display:flex;
-  flex-direction: row;
-  align-items: center;
-  padding-left: .5em;  
-  padding-right: 1em;
-  
-  color: var(--main-white);
-  background-color: #464750;
-}
-
-.arrow-right-file {
-  width: 0; 
-  height: 0; 
-  border-top: 1em solid transparent;
-  border-bottom: 1em solid transparent;
-  padding-left: 1em;
-  
-  border-left: 1em solid #464750;
-  background-color: #585858; /* var(--main-color);*/
-}
-
-.footer-mode {
-  flex-grow: 1;
-  height: 100%;
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  
-  color: var(--main-white);
-  background-color: #585858;
-}
-
-.arrow-left-mode {
-  width: 0; 
-  height: 0; 
- 
-  border-top: 1em solid transparent;
-  border-bottom: 1em solid transparent;
-  padding-right: 0.5em;
-  border-right: 1em solid rgb(169, 169, 255); 
-  background-color: #585858;
-}
-
-.footer-percent {
-  
-  height: 100%;
-  padding-right: 1em;
-  padding-left: .5em;
-  
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-
-  background-color: rgb(169, 169, 255);  
-  color: var(--main-white);
-  
-}
 /*------------*/
 
 .break {
@@ -442,7 +392,7 @@ a:visited {
     }
 }
 
-@media screen and (max-width: 36em) {
+@media screen and (max-width: 47.5em) {
   .section{
       margin:0;
       font-size: 1em;
@@ -459,6 +409,10 @@ a:visited {
     padding-left: 0;
     padding-top: .6em;
   }
+
+  .sidebar {
+    height: 60vh;
+  }
 }
 
 /*------------*/
@@ -472,3 +426,17 @@ strong {
   padding-top: 0;
 } 
 
+
+
+
+/* ---- reset ---- */
+canvas{ display: flex; } /* ---- particles.js container ---- */ 
+
+#particles-js { 
+  /* stay in a constant spot on the page, regardless of scroll */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* put it behind other content */
+  z-index: -1;
+}
